# creosote

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  Taskfile.python.yml  Taskfile.yml  pok  pok.cmd  pok.ps1  pyproject.toml  release-please-config.json  test_settings.py
.github/: .release-please-config.json  .release-please-manifest.json  CODEOWNERS  dependabot.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature.yml
.github/workflows/: action.yaml  cc.yml  check.yaml  check.yml  deps.yaml  gh-pages.yml  managed-dependabot.yml  managed-opencode.yml  managed-pr.yml  managed-releaseplease.yml  managed-stale.yml  pocket-matrix.yml  pocket-perjob.yml  pocket-pertask.yml  pocket.yml  poetry.yaml  pr.yml  publish.yml  release.yml  self-update.yml  stale.yml  sync-dependabot.yml  sync-once-sync-dependabot.yml  sync-once-sync-python.yml  sync-pr.yml  sync-python.yml  sync-release.yml  sync-stale.yml  sync.yml  test.yaml  test.yml  unmanaged-dependabot.yml  unmanaged-python.yml
.pocket/: .gitignore  config.go  go.mod  go.sum  main.go
.venv_pipx/: pyvenv.cfg
src/creosote/: CHANGELOG.md  __about__.py  __main__.py  checks.py  cli.py  config.py  depsreader.py  formatters.py  models.py  parsers.py  resolvers.py
src/creosote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  notebook.ipynb  test_cli.py  test_config_loading.py  test_custom_append_action.py  test_deferred_imports.py  test_dependency_reader.py  test_formats.py  test_integration.py  test_integration_notebook.py  test_integration_slow.py  test_legacy.py  test_parsers.py
tests/deps_files/: Pipfile  Taskfile.python.yml  pyproject.pep582.toml  pyproject.pep621.toml  pyproject.pep735.toml  pyproject.poetry.toml  requirements.txt
tests/fixtures/: fast.py  integration.py  legacy.py  manual.py
tests/manual/: test_formats_slow.py  test_integration_slow.py
