[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "creosote"
version = "1.0.2"
description = "Identify unused dependencies and avoid a bloated virtual environment."
authors = ["Fredrik Averpil <fredrik.averpil@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fredrikaverpil/creosote"

[tool.poetry.dependencies]
python = ">=3.7, <3.12"
distlib = "^0.3.4"
loguru = "^0.6.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
pytest = "*"
loguru-mypy = "*"
types-toml = "*"

[tool.poetry.scripts]
creosote = "creosote.cli:main"

[tool.ruff]
src = ["src", "tests"]
line-length = 88  # black default
select = [
    "E",  # pycodestyle (supersedes pep8)
    "W",  # pycodestyle warnings
    # "D",  # pydocstyle
    "F",  # pyflakes
    # "UP", # pyupgrade
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    # "ERA",  # eradicate
    "C4",  # flake8-comprehensions
    "A",  # flake8-builtins
    "Q",  # flake8-quotes
    "YTT",  # flake8-2020
    # "ANN",  # flake8-annotations
    "BLE",  # flake8-blind-except
    # "FBT",  # flake8-boolean-trap
    "C90",  # mccabe
    "T10",  # flake8-debugger
    # "EM",  # flake8-errmsg
    "ICN",  # flake8-import-conventions
    # "T20",  # flake8-print
    # "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    # "ARG",  # flake8-unused-arguments
    "PDV",  # pandas-vet
    "PGH",  # pygrep-hooks
    "PLC",  # pylint
    "PLE",  # pylint
    "PLR",  # pylint
    "PLW",  # pylint
    "RUF",  # ruff-specific rules

]
ignore = []

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # assert used
    "S105"  # hardcoded password
]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "distlib.*",
]
ignore_missing_imports = true
